fixed header overlap for safari

--- a/themes/apphotography/assets/css/apphotography.css
+++ b/themes/apphotography/assets/css/apphotography.css
@@ -805,6 +805,7 @@ screen and (max-width:64em) {
     header {
         padding: 0px;
         width: 100%;
+        min-height: -webkit-fit-content;
     }
     header section{
         width: 100%;
